--- a/app/templates/analytics/index.html
+++ b/app/templates/analytics/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Analytics - Creaver{% endblock %}
+{% block title %}Analytics - Creatrics{% endblock %}
 
 {% block additional_styles %}
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
