--- a/app/templates/auth/callback.html
+++ b/app/templates/auth/callback.html
@@ -312,7 +312,7 @@
     
     <div class="container" id="main-container">
         <!-- Logo text -->
-        <div class="logo-text">FOOTBALL STATISTICS</div>
+        <div class="logo-text">Creatrics</div>
         
         <!-- Loading State -->
         <div id="loading-state" class="state-container show">
