--- a/app/templates/payment/index.html
+++ b/app/templates/payment/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% set check_auth = true %}
-{% block title %}Subscription Plans - Soccer Stats{% endblock %}
+{% block title %}Subscription Plans - Creatrics{% endblock %}
 
 {% block additional_styles %}
 <style>
