--- a/app/templates/thumbnail/index.html
+++ b/app/templates/thumbnail/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Thumbnail Creator - Creaver{% endblock %}
+{% block title %}Thumbnail Creator - Creatrics{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
