--- a/app/templates/video_description/index.html
+++ b/app/templates/video_description/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Video Description Generator - Creaver{% endblock %}
+{% block title %}Video Description Generator - Creatrics{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
