--- a/app/templates/video_script/index.html
+++ b/app/templates/video_script/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Video Script - Creaver{% endblock %}
+{% block title %}Video Script - Creatrics{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
