--- a/app/templates/video_tags/index.html
+++ b/app/templates/video_tags/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Video Tags Generator - Creaver{% endblock %}
+{% block title %}Video Tags Generator - Creatrics{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
