--- a/app/templates/video_title/index.html
+++ b/app/templates/video_title/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Video Title Generator - Creaver{% endblock %}
+{% block title %}Video Title Generator - Creatrics{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
